commit about page

--- a/views/about.html
+++ b/views/about.html
@@ -11,7 +11,83 @@
 <body>
   {{>header}}
   <div class="main-container">
-  About
+<p># ParaoneChess
+</p>
+<p>ParaoneChess is a chess login site where users can play
+and record games to their profile page. Users are able to
+edit and delete accounts and view each others pages.</p>
+
+<p>Technologies Used:</p>
+
+  <p>Web APIs:</p>
+
+  <p>-YouTube Search API
+    -YouTube Player API</p>
+
+  <p>Other APIs:</p>
+
+  <p>-chessboard.js
+    -chess.js</p>
+
+  <p>Frameworks:</p>
+
+  <p>-jQuery.js
+    -Express.js
+  </p>
+  <p>Runtime Environment:</p>
+
+  <p>-Nodejs</p>
+
+  <p>Modules:</p>
+
+  <p>-express
+    -pg-promise
+    -mustache-express
+    -body-parser
+    -node-fetch
+    -bcrypt
+    -method-override</p>
+
+<p>Approach:</p>
+
+  <p>1.First steps where drawin out wireframes and such.
+    2.Finished login script before anything else.
+    3.Created profile and account pages
+    4.Create Play and View Games pages.
+    5.Create Watch page.</p>
+
+<p>Installation:</p>
+
+  <p>go to:
+
+    https://floating-escarpment-40964.herokuapp.com/</p>
+
+<p>unsolved problems:</p>
+
+  <p>-Did not implement change password in app.js
+  </p>
+<p>user stories:</p>
+
+  <p>as a user you can create a profile.
+    Save played games.
+    View account details and games.
+    Edit account details.
+    Delete your account.
+    Watch videos of chess games in the watch section.</p>
+
+<p>MVP:</p>
+
+  <p>users have good stories above :) /|\
+                      |
+                      |
+    Site is restful.
+    Deployed on heroku.com
+    Database contains tables users and games
+    (users have many games)
+    (games have one user)
+    Accesses data from YouTube API
+    Saves data from chessboard.js to database.
+    Has semantically clean HTML and CSS.</p>
   </div>
 </body>
 </html>
