add contact page info

--- a/views/contact.html
+++ b/views/contact.html
@@ -11,7 +11,11 @@
 <body>
   {{>header}}
   <div class="main-container">
-  Contact
+  <div class="well col-lg-6">
+    <p>Marcos Wade</p>
+    <p>marcoswade@gmail.com</p>
+    <p>347.927.2728</p>
+  </div>
   </div>
 </body>
 </html>
