--- a/views/about.html
+++ b/views/about.html
@@ -11,7 +11,7 @@
 <body>
   {{>header}}
   <div class="main-container">
-<p># ParaoneChess
+<div class="well"><p># ParaoneChess
 </p>
 <p>ParaoneChess is a chess login site where users can play
 and record games to their profile page. Users are able to
@@ -87,7 +87,7 @@ edit and delete accounts and view each others pages.</p>
     (games have one user)
     Accesses data from YouTube API
     Saves data from chessboard.js to database.
-    Has semantically clean HTML and CSS.</p>
+    Has semantically clean HTML and CSS.</p></div>
   </div>
 </body>
 </html>
