--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 body{
+   background: url('https://s-media-cache-ak0.pinimg.com/originals/bc/93/75/bc937577602afdad37295b44926296e6.jpg');
   padding: 0;
   margin: 0;
 }
@@ -6,7 +7,7 @@ body{
   width: 980px;
   margin: 0 auto;
 }
-
+/*  */
 h1 {
   text-align: left;
 }
