--- a/views/contact.html
+++ b/views/contact.html
@@ -11,11 +11,14 @@
 <body>
   {{>header}}
   <div class="main-container">
+<div class="contents row">
   <div class="well col-lg-6">
     <p>Marcos Wade</p>
     <p>marcoswade@gmail.com</p>
     <p>347.927.2728</p>
   </div>
   </div>
+  </div>
+  {{>footer}}
 </body>
 </html>
