--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -8,9 +8,10 @@
   <body>
   {{>header}}
     <div class="main-container">
+<div class="row contents">
       <div class="border-container">
         <h1>ParaoneChess Signup Page</h1>
-        <div class="col-lg-6 center-block">
+        <div class="col-lg-6">
           <div class="well bs-component">
             <form class="form-horizontal" action="/signup" method="post">
               <fieldset>
@@ -42,6 +43,7 @@
             </form>
           </div>
         </div>
+      </div>
       </div>
     </div>
   </body>
