--- a/views/user/game.html
+++ b/views/user/game.html
@@ -17,6 +17,7 @@
 <body>
 {{>header}}
 <div id="main-content" class="main-container">
+<div class="row contents">
   <div id="gamestuff">
       <div>Player: {{username}}, Game: #{{game_id}}</div>
     <div id="board-section">
@@ -38,6 +39,7 @@
     {{#fenlist}}
       <div class="fenmove">{{.}}</div>
     {{/fenlist}}
+    </div>
 </div>
 </body>
 </html>
