--- a/views/about.html
+++ b/views/about.html
@@ -11,7 +11,7 @@
 <body>
   {{>header}}
   <div class="main-container">
-<div class="well"><p># ParaoneChess
+<div class="contents row"><p># ParaoneChess
 </p>
 <p>ParaoneChess is a chess login site where users can play
 and record games to their profile page. Users are able to
@@ -89,5 +89,6 @@ edit and delete accounts and view each others pages.</p>
     Saves data from chessboard.js to database.
     Has semantically clean HTML and CSS.</p></div>
   </div>
+  {{>footer}}
 </body>
 </html>
