--- a/views/user/changepassword.html
+++ b/views/user/changepassword.html
@@ -11,6 +11,7 @@
 <body>
 {{>header}}
 <div class="main-container">
+<div class="row contents">
   <div class="well col-lg-6"><form>
       <fieldset>
         <legend>Change Password</legend>
@@ -24,11 +25,13 @@
                 </div></div>
         <div class="form-group">
           <div class="col-lg-6 col-lg-offset-2">
+                <br>
             <button class="btn btn-danger">Change Password</button>
           </div>
         </div>
       </fieldset>
     </form></div>
+    </div>
 </div>
 </body>
 </html>
