--- a/views/user/index.html
+++ b/views/user/index.html
@@ -10,11 +10,13 @@
 <body>
   {{>header}}
   <div class="main-container">
+<div class="row contents">
   <h2>{{username}}'s Profile</h2>
   <div>email: {{email}}</div>
   <div>id: {{id}}</div>
   <div><a href="/games/{{id}}">{{username}}'s Games</a></div>
   <div><span class="alertm">{{alert}}</span></div>
+  </div>
   </div>
 </body>
 </html>
