--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
   <body>
       {{>header}}
     <div class="main-container">
-<div class="row contents col-lg-12">
+<div class="row contents">
       <div class="border-container">
         <h1>ParaoneChess</h1>
         <br>
@@ -52,6 +52,13 @@
           <div id="status"></div>
         </div>
         {{/logged_in}}
+        <div id="users-container">
+          {{#users}}
+            <div class="profiles">
+              {{.}}
+            </div>
+          {{/users}}
+        </div>
       </div>
     </div>
     </div>
