some more changes

--- a/views/header.html
+++ b/views/header.html
@@ -21,7 +21,7 @@
         <nav>
           <div class="main-container">
             <ul id="navul">
-              <li class="navli"><a href="/" title="">Home</a></li>
+              <li class="navli"><a href="/" title="">Players</a></li>
               <li class="navli"><a href="/play" title="">Play</a></li>
               <li class="navli"><a href="/watch" title="">Watch</a></li>
               <li class="navli"><a href="/about" title="">About</a></li>
