--- a/views/user/account.html
+++ b/views/user/account.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   {{>header}}
-<div class="main-container">
+<div class="container">
 <div class="contents row">
   <div class="well bs-component col-lg-6">
     <form action="/user?__method=PUT" method="POST" class="form-horizontal">
