--- a/views/user/game.html
+++ b/views/user/game.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 {{>header}}
-<div id="main-content" class="main-container">
+<div id="main-content" class="container">
 <div class="row contents">
   <div id="gamestuff">
       <div>Player: {{username}}, Game: #{{game_id}}</div>
