--- a/views/about.html
+++ b/views/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   {{>header}}
-  <div class="main-container">
+  <div class="container">
 <div class="contents row"><p># ParaoneChess
 </p>
 <p>ParaoneChess is a chess login site where users can play
