--- a/views/play.html
+++ b/views/play.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   {{>header}}
-  <div class="main-container">
+  <div class="container">
 <div class="row contents">
     <div>Playing game as: {{user.username}}</div>
     <div id="board1" style="width: 400px;"></div>
