--- a/views/signup/index.html
+++ b/views/signup/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   {{>header}}
-    <div class="main-container">
+    <div class="container">
 <div class="row contents">
       <div class="border-container">
         <h1>ParaoneChess Signup Page</h1>
