--- a/views/user/changepassword.html
+++ b/views/user/changepassword.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 {{>header}}
-<div class="main-container">
+<div class="container">
 <div class="row contents">
   <div class="well col-lg-6"><form>
       <fieldset>
