--- a/views/user/index.html
+++ b/views/user/index.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
 <body>
   {{>header}}
-  <div class="main-container">
+  <div class="container">
 <div class="row contents">
   <h2>{{username}}'s Profile</h2>
   <div>email: {{email}}</div>
