implemented change password in appjs

--- a/views/user/changepassword.html
+++ b/views/user/changepassword.html
@@ -12,7 +12,8 @@
 {{>header}}
 <div class="container">
 <div class="row contents">
-  <div class="well col-lg-6"><form>
+  <div class="well col-lg-6">
+    <form action="/changepassword?__method=PUT" method="POST">
       <fieldset>
         <legend>Change Password</legend>
         <div class="form-group"><label for="inputPassword" class="col-lg-4 control-label">Password</label>
@@ -30,8 +31,9 @@
           </div>
         </div>
       </fieldset>
-    </form></div>
-    </div>
+    </form>
+  </div>
+</div>
 </div>
   {{>footer}}
 </body>
