--- a/views/contact.html
+++ b/views/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{username}}'s Games</title>
+  <title>Contact</title>
     <link href="/public/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/public/css/style.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Rye' rel='stylesheet' type='text/css'>
